# pfgen-bench

./: README.md  pfgen.py  pfgen_eval.py  pfgen_report.py  pyproject.toml  run-gemini-google-lib.py  run-hf.py  run-openai.py  run-vllm.py
.github/workflows/: lint.yaml  sync-archive-to-main.yml  sync-archive-to-master.yml
result/Qwen/QwQ-32B-Preview/a240792/: README.md  result.json  trials.jsonl.xz
result/Qwen/Qwen3-0.6B-Base/6693adf/: config.json
result/Qwen/Qwen3-0.6B-Base/f504bef/: config.json
result/Qwen/Qwen3-0.6B/1cd48a3/: README.md  config.json  result.json  trials.jsonl.xz
result/Qwen/Qwen3-0.6B/689490a/: config.json
result/Qwen/Qwen3-0.6B/7ce4acb/: README.md  config.json  result.json  trials.jsonl.xz
result/Qwen/Qwen3-0.6B/f953c7d/: README.md  config.json  result.json  trials.jsonl.xz
result/Qwen/Qwen3-1.7B-Base/26f4649/: config.json
result/Qwen/Qwen3-14B-Base/05c9629/: config.json
result/Qwen/Qwen3-14B-Base/3e8d9d4/: config.json
result/Qwen/Qwen3-14B/25cea1e/: README.md  config.json  result.json  trials.jsonl.xz
result/Qwen/Qwen3-14B/c59e32c/: README.md  config.json  result.json  trials.jsonl.xz
result/Qwen/Qwen3-235B-A22B-FP8/5df0f70/: config.json
result/Qwen/Qwen3-235B-A22B/318f4c6/: README.md  config.json  result.json  trials.jsonl.xz
result/Qwen/Qwen3-235B-A22B/89946a4/: README.md  config.json  result.json  trials.jsonl.xz
result/Qwen/Qwen3-30B-A3B-Base/2547f4a/: README.md  config.json  result.json  trials.jsonl.xz
result/Qwen/Qwen3-30B-A3B-Base/8196b31/: config.json
result/Qwen/Qwen3-30B-A3B-Base/8d6c0f4/: config.json
(+779 files in other folders)
