[project]
name = "pfgen-bench"
version = "0.1.0"
description = "Preferred Generation Benchmark"
authors = [
    {name = "imos", email = "173752+imos@users.noreply.github.com"}
]
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "llmcompressor>=0.3.0",
    "numba>=0.61.2",
    "numpy>=1.26.4",
    "openai>=1.72.0",
    "packaging>=25.0",
    "scipy>=1.15.2",
    "setuptools>=80.1.0",
    "torch>=2.6.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
strict_optional = true
